--- a/work.html
+++ b/work.html
@@ -53,7 +53,7 @@
       </h2>
       <div class="projects">
         <div class="item">
-          <a href="#">
+          <a href="#!">
             <img src="img/project2.jpg" alt="videotube" />
           </a>
           <a href="#" class="btn-light">
@@ -67,7 +67,7 @@
           </a>
         </div>
         <div class="item">
-          <a href="#">
+          <a href="#!">
             <img src="img/project3.jpg" alt="e commerce site" />
           </a>
           <a href="#" class="btn-light">
@@ -81,7 +81,7 @@
           </a>
         </div>
         <div class="item">
-          <a href="#">
+          <a href="#!">
             <img src="img/ums.jpg" alt="project" />
           </a>
           <a href="#" class="btn-light">
@@ -95,7 +95,7 @@
           </a>
         </div>
         <div class="item">
-          <a href="#">
+          <a href="#!">
             <img src="img/project1.jpg" alt="project" />
           </a>
           <a href="#" class="btn-light"> <i class="fas fa-eye"></i>project </a>
