--- a/work.html
+++ b/work.html
@@ -54,7 +54,7 @@
       <div class="projects">
         <div class="item">
           <a href="#!">
-            <img src="img/project2.jpg" alt="videotube" />
+            <img src="img/project2.png" alt="videotube" />
           </a>
           <a href="#" class="btn-light">
             <i class="fas fa-eye"></i>videoTube
@@ -68,7 +68,7 @@
         </div>
         <div class="item">
           <a href="#!">
-            <img src="img/project3.jpg" alt="e commerce site" />
+            <img src="img/project3.png" alt="e commerce site" />
           </a>
           <a href="#" class="btn-light">
             <i class="fas fa-eye"></i>E pola -E commerce site</a
