--- a/contact.html
+++ b/contact.html
@@ -63,6 +63,11 @@
           150,Mahahena,Pallattara East,Ihala Beligalla,Beliatta,Sri Lanka
         </div>
       </div>
+      <div>
+        You can find my CV<a href="https://drive.google.com/drive/u/0/my-drive"
+          >here</a
+        >
+      </div>
     </main>
     <footer id="main-footer">
       Copyright &copy;2020
