--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,8 @@
         </div>
       </div>
       <div>
-        You can find my CV<a href="https://drive.google.com/drive/u/0/my-drive"
+        You can find my CV<a
+          href="https://drive.google.com/file/d/1zF7M4rk6fXEXBGYH0Eytz1jGKkAdFgzb/view?usp=sharing"
           >here</a
         >
       </div>
